adjusting routes organization to get oauth working
